--- a/new1/services.html
+++ b/new1/services.html
@@ -186,23 +186,126 @@
               <li class="nav-item main-menu__item">
                 <a class="nav-link main-menu__link" href="https://plavamonika.com/" target="_blank">Главная</a>
               </li>
-              <li class="nav-item main-menu__item">
-                <a class="nav-link main-menu__link" href="https://plavamonika.com/property-status/zhiloj-fond/" target="_blank">Жилой фонд</a>
+              <li class="nav-item main-menu__item dropdown">
+                <a class="nav-link main-menu__link dropdown-toggle" href="https://plavamonika.com/property-status/zhiloj-fond/" target="_blank">Жилой фонд</a>
+                <ul class="dropdown-menu">
+                  <li class="dropdown-li"><a class="dropdown-item" href="#">Бар</a>
+                    <ul class="drop-menu2">
+                      <li class="drop-li"><a href="#" class="drop-menu2__link">Квартиры</a>
+                        <ul class="drop-menu3">
+                          <li><a href="#" class="drop-menu3__link">Однакомнатные квартиры</a></li>
+                          <li><a href="#" class="drop-menu3__link">Двухкомнатные квартиры</a></li>
+                          <li><a href="#" class="drop-menu3__link">Трехкомнатные квартиры</a></li>
+                        </ul>
+                      </li>
+                      <li><a href="#" class="drop-menu2__link">Дома</a></li>
+                      <li><a href="#" class="drop-menu2__link">Виллы</a></li>
+                    </ul>
+                  </li>
+                  <li class="dropdown-li"><a class="dropdown-item" href="#">Будва</a>
+                    <ul class="drop-menu2">
+                      <li class="drop-li"><a href="#" class="drop-menu2__link">Квартиры</a>
+                        <ul class="drop-menu3">
+                          <li><a href="#" class="drop-menu3__link">Однакомнатные квартиры</a></li>
+                          <li><a href="#" class="drop-menu3__link">Двухкомнатные квартиры</a></li>
+                          <li><a href="#" class="drop-menu3__link">Трехкомнатные квартиры</a></li>
+                        </ul>
+                      </li>
+                      <li><a href="#" class="drop-menu2__link">Дома</a></li>
+                      <li><a href="#" class="drop-menu2__link">Виллы</a></li>
+                      <li><a href="#" class="drop-menu2__link">Новостройка</a></li>
+                    </ul>
+                  </li>
+                  <li class="dropdown-li"><a class="dropdown-item" href="#">Котор</a>
+                    <ul class="drop-menu2">
+                      <li class="drop-li"><a href="#" class="drop-menu2__link">Квартиры</a>
+                        <ul class="drop-menu3">
+                          <li><a href="#" class="drop-menu3__link">Однакомнатные квартиры</a></li>
+                          <li><a href="#" class="drop-menu3__link">Двухкомнатные квартиры</a></li>
+                          <li><a href="#" class="drop-menu3__link">Трехкомнатные квартиры</a></li>
+                        </ul>
+                      </li>
+                      <li><a href="#" class="drop-menu2__link">Дома</a></li>
+                      <li><a href="#" class="drop-menu2__link">Виллы</a></li>
+                      <li><a href="#" class="drop-menu2__link">Новостройка</a></li>
+                    </ul>
+                  </li>
+                  <li class="dropdown-li"><a class="dropdown-item" href="#">Тиват</a>
+                    <ul class="drop-menu2">
+                      <li class="drop-li"><a href="#" class="drop-menu2__link">Квартиры</a>
+                        <ul class="drop-menu3">
+                          <li><a href="#" class="drop-menu3__link">Однакомнатные квартиры</a></li>
+                          <li><a href="#" class="drop-menu3__link">Двухкомнатные квартиры</a></li>
+                          <li><a href="#" class="drop-menu3__link">Трехкомнатные квартиры</a></li>
+                        </ul>
+                      </li>
+                      <li><a href="#" class="drop-menu2__link">Дома</a></li>
+                      <li><a href="#" class="drop-menu2__link">Виллы</a></li>
+                      <li><a href="#" class="drop-menu2__link">Новостройка</a></li>
+                    </ul>
+                  </li>
+                  <li class="dropdown-li"><a class="dropdown-item" href="#">Херцег-Нови</a>
+                    <ul class="drop-menu2">
+                      <li class="drop-li"><a href="#" class="drop-menu2__link">Квартиры</a>
+                        <ul class="drop-menu3">
+                          <li><a href="#" class="drop-menu3__link">Однакомнатные квартиры</a></li>
+                          <li><a href="#" class="drop-menu3__link">Двухкомнатные квартиры</a></li>
+                          <li><a href="#" class="drop-menu3__link">Трехкомнатные квартиры</a></li>
+                        </ul>
+                      </li>
+                      <li><a href="#" class="drop-menu2__link">Дома</a></li>
+                      <li><a href="#" class="drop-menu2__link">Виллы</a></li>
+                      <li><a href="#" class="drop-menu2__link">Новостройка</a></li>
+                    </ul>
+                  </li>
+                </ul>
               </li>
               <li class="nav-item main-menu__item dropdown">
                 <a class="nav-link main-menu__link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" target="_blank">Тип недвижимости</a>
-                <div class="dropdown-menu">
-                  <a class="dropdown-item" href="#">Квартира</a>
-                  <a class="dropdown-item" href="#">Дом</a>
-                  <a class="dropdown-item" href="#">Вилла</a>
-                  <a class="dropdown-item" href="#">Новостройка</a>
-                  <a class="dropdown-item" href="#">Земля</a>
-                  <a class="dropdown-item" href="#">Отели</a>
-                  <a class="dropdown-item" href="#">Торговая площадь</a>
-                </div>
+                <ul class="dropdown-menu">
+                  <a class="dropdown-item" href="#" target="_blank">Квартира</a>
+                  <a class="dropdown-item" href="#" target="_blank">Дом</a>
+                  <a class="dropdown-item" href="#" target="_blank">Вилла</a>
+                  <a class="dropdown-item" href="#" target="_blank">Новостройка</a>
+                  <a class="dropdown-item" href="#" target="_blank">Земля</a>
+                  <a class="dropdown-item" href="#" target="_blank">Отели</a>
+                  <a class="dropdown-item" href="#" target="_blank">Торговая площадь</a>
+                </ul>
               </li>
-              <li class="nav-item main-menu__item">
-                <a class="nav-link main-menu__link" href="https://plavamonika.com/property-status/kommercheskaya-nedvizhimost/" target="_blank">Коммерческая недвижимость</a>
+              <li class="nav-item main-menu__item dropdown">
+                <a class="nav-link main-menu__link dropdown-toggle" href="https://plavamonika.com/property-status/kommercheskaya-nedvizhimost/" target="_blank">Коммерческая недвижимость</a>
+                <ul class="dropdown-menu">
+                  <li class="dropdown-li"><a class="dropdown-item" href="#">Бар</a>
+                    <ul class="drop-menu2">
+                      <li><a href="#" class="drop-menu2__link">Отели</a></li>
+                      <li><a href="#" class="drop-menu2__link">Торговые площади</a></li>
+                    </ul>
+                  </li>
+                  <li class="dropdown-li"><a class="dropdown-item" href="#">Будва</a>
+                    <ul class="drop-menu2">
+                      <li><a href="#" class="drop-menu2__link">Отели</a></li>
+                      <li><a href="#" class="drop-menu2__link">Торговые площади</a></li>
+                    </ul>
+                  </li>
+                  <li class="dropdown-li"><a class="dropdown-item" href="#">Котор</a>
+                    <ul class="drop-menu2">
+                      <li><a href="#" class="drop-menu2__link">Отели</a></li>
+                      <li><a href="#" class="drop-menu2__link">Торговые площади</a></li>
+                    </ul>
+                  </li>
+                  <li class="dropdown-li"><a class="dropdown-item" href="#">Тиват</a>
+                    <ul class="drop-menu2">
+                      <li><a href="#" class="drop-menu2__link">Отели</a></li>
+                      <li><a href="#" class="drop-menu2__link">Торговые площади</a></li>
+                    </ul>
+                  </li>
+                  <li class="dropdown-li"><a class="dropdown-item" href="#">Херцег-Нови</a>
+                    <ul class="drop-menu2">
+                      <li><a href="#" class="drop-menu2__link">Отели</a></li>
+                      <li><a href="#" class="drop-menu2__link">Торговые площади</a></li>
+                    </ul>
+                  </li>
+                </ul>
               </li>
               <li class="nav-item main-menu__item">
                 <a class="nav-link main-menu__link" href="#" target="_blank">Спец предложения</a>
@@ -214,10 +317,10 @@
                 <a class="nav-link main-menu__link" href="https://plavamonika.com/uslugi/" target="_blank">Услуги</a>
               </li>
               <li class="nav-item main-menu__item">
-                <a class="nav-link main-menu__link" href="https://plavamonika.com/category/novosti/" target="_blank">Блог</a>
+                <a class="nav-link main-menu__link" href="https://plavamonika.com/uslugi/" target="_blank">Блог</a>
               </li>
               <li class="nav-item main-menu__item">
-                <a class="nav-link main-menu__link" href="https://plavamonika.com/kontakty/">Контакты</a>
+                <a class="nav-link main-menu__link" href="https://plavamonika.com/kontakty/" target="_blank">Контакты</a>
               </li>
             </ul>
 
@@ -271,7 +374,7 @@
 
 <div class="bg-block">
   <div class="container">
-    <img src="img/services.png" alt="">
+    <img src="/img/services.png" alt="">
     <p class="str-title">Услуги</p>
   </div>
 </div>
@@ -381,6 +484,41 @@
 
           <div class="right-block">
             <a href="https://plavamonika.com/properties-search/?" class="right-block__link" target="_blank" id="link-kat">Каталог недвижимости</a>
+
+            <ul class="right-menu">
+              <li class="right-menu__item">
+                <a class="right-menu__link" href="https://plavamonika.com/property-type/villa/">Вилла</a>
+              </li>
+              <li class="right-menu__item">
+                <a class="right-menu__link" href="https://plavamonika.com/property-type/dom/">Дом</a>
+              </li>
+              <li class="right-menu__item">
+                <a class="right-menu__link" href="https://plavamonika.com/property-type/zemlya/">Земля</a>
+              </li>
+              <li class="right-menu__item">
+                <a class="right-menu__link" href="https://plavamonika.com/property-type/kvartiry/">Квартира</a>
+                <ul class="children-menu">
+                  <li class="children-menu__item">
+                    <a class="children-menu__link" href="https://plavamonika.com/property-type/dvuhkomnatnaya-kvartira/">Двухкомнатная квартира</a>
+                  </li>
+                  <li class="children-menu__item">
+                    <a class="children-menu__link" href="https://plavamonika.com/property-type/odnokomnatnaya-kvartira/">Однокомнатная квартира</a>
+                  </li>
+                  <li class="children-menu__item">
+                    <a class="children-menu__link" href="https://plavamonika.com/property-type/trehkomnatnaya-kvartira/">Трехкомнатная квартира</a>
+                  </li>
+                </ul>
+              </li>
+              <li class="right-menu__item">
+                <a class="right-menu__link" href="https://plavamonika.com/property-type/novostrojka/">Новостройка</a>
+              </li>
+              <li class="right-menu__item">
+                <a class="right-menu__link" href="https://plavamonika.com/property-type/otel/">Отель</a>
+              </li>
+              <li class="right-menu__item">
+                <a class="right-menu__link" href="https://plavamonika.com/property-type/torgovaya-ploshhad/">Торговая площадь</a>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
@@ -1016,6 +1154,41 @@
             </div>
             <div class="bus-right flex-st">
               <a href="https://plavamonika.com/properties-search/?" class="bus-right__link" target="_blank">Каталог недвижимости</a>
+
+              <ul class="right-menu">
+                <li class="right-menu__item">
+                  <a class="right-menu__link" href="https://plavamonika.com/property-type/villa/">Вилла</a>
+                </li>
+                <li class="right-menu__item">
+                  <a class="right-menu__link" href="https://plavamonika.com/property-type/dom/">Дом</a>
+                </li>
+                <li class="right-menu__item">
+                  <a class="right-menu__link" href="https://plavamonika.com/property-type/zemlya/">Земля</a>
+                </li>
+                <li class="right-menu__item">
+                  <a class="right-menu__link" href="https://plavamonika.com/property-type/kvartiry/">Квартира</a>
+                  <ul class="children-menu">
+                    <li class="children-menu__item">
+                      <a class="children-menu__link" href="https://plavamonika.com/property-type/dvuhkomnatnaya-kvartira/">Двухкомнатная квартира</a>
+                    </li>
+                    <li class="children-menu__item">
+                      <a class="children-menu__link" href="https://plavamonika.com/property-type/odnokomnatnaya-kvartira/">Однокомнатная квартира</a>
+                    </li>
+                    <li class="children-menu__item">
+                      <a class="children-menu__link" href="https://plavamonika.com/property-type/trehkomnatnaya-kvartira/">Трехкомнатная квартира</a>
+                    </li>
+                  </ul>
+                </li>
+                <li class="right-menu__item">
+                  <a class="right-menu__link" href="https://plavamonika.com/property-type/novostrojka/">Новостройка</a>
+                </li>
+                <li class="right-menu__item">
+                  <a class="right-menu__link" href="https://plavamonika.com/property-type/otel/">Отель</a>
+                </li>
+                <li class="right-menu__item">
+                  <a class="right-menu__link" href="https://plavamonika.com/property-type/torgovaya-ploshhad/">Торговая площадь</a>
+                </li>
+              </ul>
             </div>
           </div>
 
@@ -1182,7 +1355,7 @@
 </div>
 
 
-<a href="#top" class="top-scroll"><img src="img/top-scroll.png" alt=""></a>
+<a href="#top" class="top-scroll"><img src="/img/top-scroll.png" alt=""></a>
 
 <footer class="footer">
   <div class="container">
@@ -1195,7 +1368,7 @@
       <div class="col-12">
         <div class="footer-content">
           <div class="soc-contact">
-            <a href="plavamonika@yandex.ru" class="soc-contact__link"><span><img src="img/email.png" alt=""></span>e-mail</a>
+            <a href="malito:plavamonika@yandex.ru" class="soc-contact__link"><span><img src="img/email.png" alt=""></span>plavamonika@yandex.ru</a>
             <a href="https://www.facebook.com/plavamonikare/" class="soc-contact__link"><span><img src="img/facebook-foot.png" alt=""></span>Facebook</a>
             <a href="https://www.youtube.com/channel/UCgFDioI9-j1fzQYUIRCKFsA" class="soc-contact__link"><span><img src="img/youtube.png" alt=""></span>YouTube</a>
           </div>
