--- a/new1/services.html
+++ b/new1/services.html
@@ -1355,7 +1355,7 @@
 </div>
 
 
-<a href="#top" class="top-scroll"><img src="/img/top-scroll.png" alt=""></a>
+<a href="#top" class="top-scroll"><img src="img/top-scroll.png" alt=""></a>
 
 <footer class="footer">
   <div class="container">
