--- a/new1/index.html
+++ b/new1/index.html
@@ -1196,7 +1196,7 @@
 
             <p class="info-left__text">Подписывайтесь на наш канал в телеграмм, чтобы не пропустить важные события, происходящие в законодательстве Черногории, а так же новые и выгодные предложения. Инвестиционные новости, изменение цен на недвижимость , статистика и аналитика рынка недвижимости и многое другое на нашем канале в Telegram</p>
 
-            <a href="#" class="info-left__link">
+            <a href="https://t.me/plavamonika" class="info-left__link" target="blank">
               <span>
                 <img src="img/telegram-app.svg" alt="" style="object-fit: contain;">
               </span>
