--- a/new1/index.html
+++ b/new1/index.html
@@ -432,7 +432,7 @@
                   <a class="nav-link main-menu__link" href="https://plavamonika.com/uslugi/" target="_blank">Услуги</a>
                 </li>
                 <li class="nav-item main-menu__item">
-                  <a class="nav-link main-menu__link" href="https://plavamonika.com/uslugi/" target="_blank">Блог</a>
+                  <a class="nav-link main-menu__link" href="https://plavamonika.com/category/novosti/" target="_blank">Блог</a>
                 </li>
                 <li class="nav-item main-menu__item">
                   <a class="nav-link main-menu__link" href="https://plavamonika.com/kontakty/" target="_blank">Контакты</a>
@@ -456,7 +456,7 @@
 
               <div class="tel-page two-phone">
                 <a href="tg://resolve?domain=+38268023982" class="tel-page__tel-img" target="_blank"><img src="img/Telegram_logo.png" alt=""></a>
-                <a href="tel:+382 68023982" class="tel-page__tel">+382 68023982</a>
+                <a href="tg://resolve?domain=+38268023982" class="tel-page__tel">+382 68023982</a>
               </div>
             </div>
 
@@ -713,11 +713,11 @@
   <!-- click block 3 -->
   <div class="click-block" id="clickBlock3">
     <p class="click-text">В Черногории покупка недвижимости является основанием для выдачи вида на жительство для собственнику и его семье. Также существует программа экономического гражданства, по которой за инвестиции можно сразу получить Черногорский паспорт, дающий ряд преимуществ.
-      ˅Держатели черногорского паспорта могут беспрепятственно посещать 115 стран мира, включая государства Евросоюза, Гонконг, Сингапур и др.
-      ˅ Паспорт Черногории к 2025 году может стать «паспортом ЕС». Черногория намерена стать членом Евросоюза. После этого граждане страны смогут жить, учиться и работать в любом европейском государстве.
-      ˅ Конфиденциальность процесса. Сведения о присвоении статуса нигде не публикуются и не передаются в соответствующие органы страны первого гражданства.
-      ˅ В сфере образования . По окончанию школы дети могут пользоваться образовательной программой ЭРАСМУС (европейской образовательной программой по обмену) и американскими образовательными программами.
-      ˅Быстрое оформление паспорта. Получить паспорт можно за полгода. К сравнению: оформление мальтийского паспорта занимает 1 год и два месяца.
+      <br>˅Держатели черногорского паспорта могут беспрепятственно посещать 115 стран мира, включая государства Евросоюза, Гонконг, Сингапур и др.
+      <br>˅ Паспорт Черногории к 2025 году может стать «паспортом ЕС». Черногория намерена стать членом Евросоюза. После этого граждане страны смогут жить, учиться и работать в любом европейском государстве.
+      <br>˅ Конфиденциальность процесса. Сведения о присвоении статуса нигде не публикуются и не передаются в соответствующие органы страны первого гражданства.
+      <br>˅ В сфере образования . По окончанию школы дети могут пользоваться образовательной программой ЭРАСМУС (европейской образовательной программой по обмену) и американскими образовательными программами.
+      <br>˅Быстрое оформление паспорта. Получить паспорт можно за полгода. К сравнению: оформление мальтийского паспорта занимает 1 год и два месяца.
       <a href="javascript: void 0" class="click-exit" id="click3">✖</a>
     </p>
   </div>
@@ -1000,7 +1000,7 @@
             <p class="left-slider__text wow zoomIn">рассчитывать сроки ее продать, поэтому прибыль от сдачи</p>
             <p class="left-slider__text wow zoomIn">недвижимости в аренду вы сможете получать практически сразу.</p>
 
-            <a href="javascript: void 0" class="left-slider__link wow zoomIn" id="leftsl">Скачать ещё</a>
+            <a href="javascript: void 0" class="left-slider__link wow zoomIn" id="leftsl">Скачать всё</a>
           </div>
         </div>
         <div class="col-12 col-xl-7">
@@ -1196,7 +1196,7 @@
 
             <p class="info-left__text">Подписывайтесь на наш канал в телеграмм, чтобы не пропустить важные события, происходящие в законодательстве Черногории, а так же новые и выгодные предложения. Инвестиционные новости, изменение цен на недвижимость , статистика и аналитика рынка недвижимости и многое другое на нашем канале в Telegram</p>
 
-            <a href="https://t.me/plavamonika" class="info-left__link" target="blank">
+            <a href="https://t.me/joinchat/AAAAAFZdASgQX4Az3FwIUA" class="info-left__link" target="blank">
               <span>
                 <img src="img/telegram-app.svg" alt="" style="object-fit: contain;">
               </span>
@@ -1220,7 +1220,7 @@
     </div>
   </div>
 
-  <a href="#top" class="top-scroll"><img src="img/top-scroll.png" alt=""></a>
+  <a href="#top" class="top-scroll"><img src="/img/top-scroll.png" alt=""></a>
 
   <footer class="footer">
     <div class="container">
@@ -1286,7 +1286,7 @@
 
               <div class="tel-page two-phone">
                 <a href="tg://resolve?domain=+38268023982" class="tel-page__tel-img" target="_blank"><img src="img/Telegram_logo.png" alt=""></a>
-                <a href="tel:+382 68023982" class="tel-page__tel">+382 68023982</a>
+                <a href="tg://resolve?domain=+38268023982" class="tel-page__tel">+382 68023982</a>
               </div>
             </div>
           </div>
