--- a/new1/services.html
+++ b/new1/services.html
@@ -317,7 +317,7 @@
                 <a class="nav-link main-menu__link" href="https://plavamonika.com/uslugi/" target="_blank">Услуги</a>
               </li>
               <li class="nav-item main-menu__item">
-                <a class="nav-link main-menu__link" href="https://plavamonika.com/uslugi/" target="_blank">Блог</a>
+                <a class="nav-link main-menu__link" href="https://plavamonika.com/category/novosti/" target="_blank">Блог</a>
               </li>
               <li class="nav-item main-menu__item">
                 <a class="nav-link main-menu__link" href="https://plavamonika.com/kontakty/" target="_blank">Контакты</a>
@@ -340,8 +340,8 @@
             </div>
 
             <div class="tel-page two-phone">
-              <a href="tel:+382 68023982" class="tel-page__tel-img" target="_blank"><img src="img/Telegram_logo.png" alt=""></a>
-              <a href="tel:+382 68023982" class="tel-page__tel">+382 68023982</a>
+              <a href="tg://resolve?domain=+38268023982" class="tel-page__tel-img" target="_blank"><img src="img/Telegram_logo.png" alt=""></a>
+              <a href="tg://resolve?domain=+38268023982" class="tel-page__tel">+382 68023982</a>
             </div>
           </div>
 
@@ -1355,7 +1355,7 @@
 </div>
 
 
-<a href="#top" class="top-scroll"><img src="img/top-scroll.png" alt=""></a>
+<a href="#top" class="top-scroll"><img src="/img/top-scroll.png" alt=""></a>
 
 <footer class="footer">
   <div class="container">
@@ -1421,7 +1421,7 @@
 
             <div class="tel-page two-phone">
               <a href="tg://resolve?domain=+38268023982" class="tel-page__tel-img" target="_blank"><img src="img/Telegram_logo.png" alt=""></a>
-              <a href="tel:+382 68023982" class="tel-page__tel">+382 68023982</a>
+              <a href="tg://resolve?domain=+38268023982" class="tel-page__tel">+382 68023982</a>
             </div>
           </div>
         </div>
