--- a/new1/index.html
+++ b/new1/index.html
@@ -1184,6 +1184,33 @@
     </div>
   </div>
 
+	<div class="sms-block">
+		<div class="container">
+			<div class="row no-gutters">
+				<div class="col-12">
+					<p class="sms-title">Отзывы наших клиентов</p>
+					<div class="sms-cont">
+						<div class="sms-item">
+							<p class="sms-name">Name</p>
+							<p class="sms-text">sms</p>
+						</div>
+						<div class="sms-item">
+							<p class="sms-name">Name</p>
+							<p class="sms-text">sms</p>
+						</div>
+						<div class="sms-item">
+							<p class="sms-name">Name</p>
+							<p class="sms-text">sms</p>
+						</div>
+					</div>
+
+					<a href="#" class="sms-link">Читать все отзывы<img src="img/sms-link.png" alt=""></a>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
   <div class="info-section">
     <div class="container">
       <div class="row no-gutters">
